--- a/firestore-stripe-invoices/functions/package.json
+++ b/firestore-stripe-invoices/functions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firestore-stripe-invoices",
-   "engines": {
+  "engines": {
     "node": "16"
   },
   "main": "lib/index.js",
@@ -16,15 +16,15 @@
   "author": "Stripe (https://stripe.com/)",
   "license": "Apache-2.0",
   "dependencies": {
-    "firebase-admin": "^11.10.1",
+    "firebase-admin": "^13.0.1",
     "firebase-functions": "^3.14.1",
     "rimraf": "^3.0.2",
     "stripe": "8.56.0",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.1.6",
-    "@types/express": "^4.17.3"
+    "@types/express": "^4.17.3",
+    "firebase-functions-test": "^0.1.6"
   },
   "prettier": {
     "singleQuote": true,
