--- a/firestore-stripe-web-sdk/package.json
+++ b/firestore-stripe-web-sdk/package.json
@@ -60,8 +60,9 @@
     "webpack": "^5.97.1"
   },
   "dependencies": {
-    "@firebase/app": "^0.9.17",
-    "@firebase/auth": "^1.3.0",
-    "@firebase/firestore": "^4.1.2"
+    "@firebase/app": "^0.10.17",
+    "@firebase/auth": "^1.8.1",
+    "@firebase/firestore": "^4.7.5",
+    "firebase": "^10.14.1"
   }
 }
